--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,4 @@ lib_deps =
   mobizt/FirebaseClient @ ^1.2.0
   arduino-libraries/NTPClient @ ^3.2.1
   beegee-tokyo/DHT sensor library for ESPx @ ^1.19
+  tzapu/WiFiManager @ ^0.16.0
